--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
+		"@uehreka/seriously": "^1.0.1",
 		"p5": "^1.11.3",
 		"p5-svelte": "^3.1.2",
 		"simplex-noise": "^4.0.3"
